--- a/pages/local_leaders/getting-started.html
+++ b/pages/local_leaders/getting-started.html
@@ -130,7 +130,7 @@
    					<div style="width:65%; float:left; margin:203px 0 60px 15px;">
    						<p class="click-here blue">
               <img  style="float:left; margin-right:20px;" src="../../img/local-leaders/download_blue.png"/>
-              <a href="../../pdfs/local_leaders/Pathway_Handbook_for_Church_Leaders.pdf" target="_blank">Click here to download the Pathway <br />Priesthood Leadership Handbook.</a></p>
+              <a href="../../pdfs/local_leaders/Pathway_Handbook_for_Church_Leaders.pdf" target="_blank">Click here to download the Pathway <br />Priesthood Leadership Guide.</a></p>
    					</div>
    				</div> 
    				
@@ -163,7 +163,7 @@
    					<div class="pf-section no-icon">
    						<h3 class="p-heading blue">Agent Stake President Assignment</h3>
    						<p class="main-content">The effort to launch Pathway in an area can gain traction when a stake president either volunteers or is delegated to take the lead. Generally this means completing and submitting an <a style="color:#dc4831;;" href="request-a-site.html">application to formally request Pathway,</a> coordinating the selection of <a style="color:#dc4831;" href="roles-responsibilities.html#roleofpathwaymissionaries" target="_blank">Church Service Missionaries</a> to administer the program, and serving as a point of contact for BYU-Idaho until service missionaries are in place.</p>
-   						<p class=""><a style="color:#dc4831;" href="roles-responsibilities.html#roleofpathwaymissionaries" target="_blank">Learn more</a> about the roles of Pathway service missionaries, and download the <a style="color:#dc4831;" href="http://www.byui.edu/Documents/Admin_Offices/Online%20Learning/Online%20Instruction/Pathway_Site_Application-3.pdf" target="_blank">Church Service Missionary Form.</a></p>
+   						<p class=""><a style="color:#dc4831;" href="roles-responsibilities.html#roleofpathwaymissionaries" target="_blank">Learn more</a> about the roles of Pathway service missionaries, and download the <a style="color:#dc4831;" href="http://www.byui.edu/Documents/Admin_Offices/Online%20Learning/CSM%20Form.pdf" target="_blank">Church Service Missionary Form.</a></p>
    					</div>
    					<div class="pf-section no-icon">
    						<h3 class="p-heading blue">Pathway Group Types and Locations</h3>
