--- a/pages/speaking_partners/what-is-speaking-partners.html
+++ b/pages/speaking_partners/what-is-speaking-partners.html
@@ -139,7 +139,7 @@
       </div>
 
         <div class="caption-block green">
-        <p>To watch more videos or learn more about about Pathway, visit our Media Page, or click on one of the social media links at the bottom of the page.</p>
+        <p>To watch more videos or learn more about about Pathway, visit our <br><a href="http://www.byui.edu/pathway/videos" target="_blank">Media Page,</a> or click on one of the social media links at the bottom of the page.</p>
         </div>
 
         <div class="main-content">
