--- a/pages/what_is_pathway/l_version/course_descriptions.html
+++ b/pages/what_is_pathway/l_version/course_descriptions.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>Pathway - How Pathway Works</title>
+<title>Pathway - Course Descriptions</title>
 
 <!-- Favicon Section -->
 <link rel="apple-touch-icon" sizes="57x57" href="../../../favicon/apple-touch-icon-57x57.png" />
@@ -22,7 +23,7 @@
 <link rel="icon" type="image/png" href="../../../favicon/favicon-32x32.png" sizes="32x32" />
 <link rel="icon" type="image/png" href="../../../favicon/favicon-16x16.png" sizes="16x16" />
 <meta name="msapplication-TileColor" content="#f3a91e" />
-<meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
+<meta name="msapplication-TileImage" content="../../../favicon/mstile-144x144.png" />
 <!-- Bootstrap core CSS -->
 <link href="../../../dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -42,18 +43,15 @@
 
 
 <body>
-<!-- START First Top Header -->
-<div class="navbar navbar-inverse signIn pathway-header">
+<!-- START First Top Header --><div class="navbar navbar-inverse signIn pathway-header" role="signIn">
 	<div class="container">
 		<ul class="nav navbar-nav orange-bar">
 			<li class="header-column visible-xs pull-left">&nbsp;</li>
 			<li class="header-column pull-left">
-				<a class="navbar-brand img-responsive hidden-xs" href="../../../index.htm"><img id="pathway-logo" width="280" 
-
-					src="../../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../../index.htm"><img id="pathway-mobile-logo" src="../../../img/mobile-logo.png"></a>
+				<a class="navbar-brand img-responsive hidden-xs" href="../../../index.htm"><img id="pathway-logo" width="280px" src="../../../img/logo.png"></a> <a class="center-block navbar-brand visible-xs" href="../../../index.htm"><img id="pathway-mobile-logo" src="../../../img/mobile-logo.png"></a>
 				</li>
 				<li class="header-column pull-right">
-					<a class="header_contact hidden-xs pull-left" href="../../advising-and-support.html">Contact Us <img src="../../../img/speechbubble.png" width="13" height="11" alt="speech"></a>
+					<a class="header_contact hidden-xs pull-left" href="#contactUs">Contact Us <img src="../../../img/speechbubble.png" width="13" height="11" alt="speech"></a>
 						<form class="navbar-right pull-right">
 							<button type="submit" class="btn signin-btn">
 								SIGN IN
@@ -78,7 +76,7 @@
 				<nav id="siteNavigation" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li class="nav-1"><a href="../../testimonials/testimonials.html">Testimonials</a></li>
-						<li class="nav-2 nav_active"><a href="../../what_is_pathway/what_is_pathway.html">What Is Pathway</a></li>
+						<li class="nav-2 nav_active"><a href="../what_is_pathway.html">What Is Pathway</a></li>
 						<li class="nav-3"><a href="#join">Join Pathway</a></li>
 						<li class="nav-4"><a href="../../speaking_partners/what-is-speaking-partners.html">SPEAKING PARTNERS</a></li>
 						<li class="nav-5"><a href="../../local_leaders/using-pathway.html">Local Leaders</a></li>
@@ -93,72 +91,52 @@
 				<div id="breadCrumb" class="breadCrumb module">
 					<ul>
 						<li class="first"><a href="../../../index.htm">Home</a></li>
-						<li><a href="../what_is_pathway.html">What Is Pathway</a></li>
-						<li class="pipe-divider">L Version</li>
-						<li class="last lowercase">How Pathway Works</li>
+						<li class="pipe-divider">Standard Version</li>
+						<li class="last">Course Descriptions</li>
 					</ul>
 				</div>
 			</div>
 		</div>
 <!-- Breadcrumb end -->
+
 <!-- Start to the content area -->
 
 <div id="main-container" class="container">
 	<div class="row row-offcanvas row-offcanvas-right">
 		<div class="col-xs-12 col-sm-8 main-content">
-			<button type="button" onClick="open_side();" class="navbar-toggle sidebar-btn collapsed">
-            <img id="arrow-icon" src="../../../img/arrow.png" width="14" height="14" alt="arrow">
-<!--<span class="sr-only">Toggle navigation</span>
-<span class="icon-bar" style="width: 3px;float: left;"></span>
-<span class="icon-bar" style=" float: left;margin-left: 3px;width: 16px;margin-top: 0;"></span>
-<span class="icon-bar" style="float: left;clear: left;margin-left: 6px;width: 16px;"></span>
-<span class="icon-bar" style="float: left;clear: left;margin-left: 6px; width: 16px;"></span>-->
-</button>
-			<div class="hero pf-page-header">
-				<img src="../../../img/wip/icons/lversion.png" alt="L-VersionLogo">
-				<h1 id="Standard" class="page-title">L Version</h1>
-				<p class="page-summary">For students who have low to intermediate English proficiency.</p></div>
-			<div class="pf-section">
-				<div class="pf-page-header">
-					<img src="../../../img/wip/icons/gear.png" width="45" height="46" alt="gear">
-					<h2 id="HowPathwayWorks" class="subheading">How Pathway Works</h2>
-				</div>
-				<h3 id="OnlineAcademicCourses" class="p-heading turquoise">Online Academic Courses</h3>
-				<p>During each of the three semesters, students take just one online academic class from BYU-Idaho. The three academic classes incorporate English-language instruction as a main component of the coursework and are designed to give students the confidence and skills needed to succeed in college and life. The L version academic courses include Pathway English and Life Skills (GS 120L), English Language and Personal Finance (Math 100L), and English Language and Basic Writing (ENG 106L).</p>
-				<!-- <ul>
-					<li>
-						Pathway Life Skills (GS 120)
-					</li>
-					<li>
-						Basic Writing (ENG 106)
-					</li>
-					<li>
-						Personal Finance (Math 100G)
-					</li>
-				</ul>
-				<img class="center-block img-responsive" src="../../../img/WIP/section_imgs/books_calculator_paper.png"> -->
-
-				<img class="center-block img-responsive img-space" src="../../../img/hpw/pathway_course_sequence_l.png" alt="pathway course sequence" width="100%">
-
-				<h3 id="ReligionClasses" class="p-heading turquoise">Religion Courses</h3>
-				<p>Because of the advantages for English-learning Church members, L version students are strongly encouraged to
-				enroll in an institute class of their choice during the three semesters of Pathway.</p>
-
-				<h3 id="WeeklyGathering" class="p-heading turquoise">Weekly Gathering</h3>
-				<p>The program includes a 90-minute gathering each week at a local institute facility or church meetinghouse with other
-				Pathway students and a service missionary couple. </p>
-
-				<img class="center-block img-responsive img-space" src="../../../img/hpw/weeklygatheringgraphic_blue.png" alt="weekly calendar" width="100%">
-
-				<p>The gathering provides social, emotional, and academic support and is held every Thursday evening during the three BYU-Idaho academic semesters. </p>
-
-				<img class="center-block img-responsive img-space" src="../../../img/hpw/semester_schedule_blue.png" alt="semester track" width="100%">
+			<div class="hero pf-page-header no-icon">
+				<h1 id="Standard" class="page-title">Course Descriptions</h1>
+				<h3 class="subheading red">Standar<h3>
 			</div>
-            <p><a href="speaking_partners.html" class="next turquoise">Speaking Partners >></a></p>
+			<div class="pf-section no-icon">
+
+				<p>Designed to give students the confidence and skills needed to succeed in college, Pathway is a low-cost educational opportunity that combines online courses with local gatherings. Students earn
+				college credit that is eligible for transfer to BYU-Idaho and other universities.The program takes three semesters, or one year, to complete and can lead to professional certificates and degrees.</p>
+
+			</div>	
+            <div class="visible-xs pf-section no-icon mobile_s-l">
+            <p><a href="../s_version/HPW.html"><img src="../../../img/wip/icons/button_standard.png"></a><br>
+<span class="caption">For students who are proficient in English.</span></p>
+            <p><a href="HPW.html"><img src="../../../img/wip/icons/button_lversion.png"></a><br>
+<span class="caption">For students who a have low to intermediate English proficiency.</span></p>
+			</div>	
+
+				<div id="video-info-block">
+				<img alt="play-button" class="play-button img-responsive" src="../../../img/wip/play_button.png">
+				<p class="note red">Watch the video below to learn&nbsp;more&nbsp;about&nbsp;Pathway.</p>
+				</div>
+
+				<div class="responsive-video-container wip">
+					<iframe id="kaltura_player" src="https://www.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/16687322/partner_id/1157612?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=0_euu0socv&amp;wid=0_a965eaxk&amp;flashvars[mediaProtocol]=rtmp&amp;flashvars[streamerType]=rtmp&amp;flashvars[streamerUrl]=rtmp://www.kaltura.com:1935&amp;flashvars[rtmpFlavors]=1&amp;" width="592" height="422" allowfullscreen webkitallowfullscreen mozAllowFullScreen frameborder="0"><a href="http://corp.kaltura.com/products/video-platform-features">Video Platform</a><a href="http://corp.kaltura.com/Products/Features/Video-Management">Video Management</a><a href="http://corp.kaltura.com/Video-Solutions">Video Solutions</a><a href="http://corp.kaltura.com/Products/Features/Video-Player">Video Player</a></iframe>
+				</div>
+
+				<div class="caption-block red">
+				<p>Visit our <a href="http://www.byui.edu/pathway/videos" target="_blank">Media Page</a> or use the social media links below to watch more Pathway videos.</p>
+				</div>
+
+					
 		</div>
-
-				
-
+		
 		<!-- Sidebar Start -->
 <div class="col-xs-6 col-sm-4 pull-right" id="sidebar" role="navigation">
 			<div class="pf-sidebar" id="sideNav" role="complementary">
@@ -167,7 +145,7 @@
 				<h3><a href="../s_version/HPW.html"><img src="../../../img/wip/icons/standard.png" alt="Standard Logo" width="51" height="52"> Standard</a></h3>
 				<h3><a class="active" href="../l_version/HPW.html"><img src="../../../img/wip/icons/lversion.png" alt="L Version Logo"> L Version</a></h3>
                 <ul class="nav turquoise pf-sidenav">
-					<li class="active">
+					<li>
 						<a href="HPW.html">
 						<span class="caret down"></span>
 						How Pathway Works</a>
@@ -228,7 +206,7 @@
 							</li>
 						</ul>
 					</li>
-                    <li>
+                    <li class="active">
 						<a href="course_descriptions.html">
                         <span class="caret down"></span> 
                         Course Descriptions</a>
@@ -265,7 +243,5 @@
 <!-- Placed at the end of the document so the pages load faster --> 
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script> 
 <script src="../../../dist/js/bootstrap.min.js"></script> 
-<script src="../../../js/jquery.easing.1.3.js" type="text/javascript" ></script>
-<script src="../../../js/drawer.js" type="text/javascript"></script>
 </body>
 </html>
