--- a/pages/what_is_pathway/l_version/speaking_partners.html
+++ b/pages/what_is_pathway/l_version/speaking_partners.html
@@ -209,6 +209,11 @@
 							</li>
 						</ul>
 					</li>
+                    <li>
+						<a href="course_descriptions.html">
+                        <span class="caret down"></span> 
+                        Course Descriptions</a>
+					</li>
 				</ul>
                 <h3><a href="../../pathway-faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
 			</div>
