--- a/pages/what_is_pathway/s_version/cost.html
+++ b/pages/what_is_pathway/s_version/cost.html
@@ -132,7 +132,7 @@
 				<p>Pathway’s low tuition rate brings a college education within financial reach of many who thought they could not afford college.</p>
 
 				<a href="cost_calc_tuition.html"><img src="../../../img/cost/button_tuition.png" alt="Click here to calculate tuition" class="img-responsive" width="100%"></a>
-
+<br>
 				<img class="img-responsive" src="../../../img/cost/semester_college_cost.png" alt="Cost Chart" width="100%">
 
 				<!-- <a href="cost_calc_tuition.html"><img src="../../../img/WIP/section_imgs/calculate_tuition.png" alt="Cost Chart" width="370" height="66" class="center-block img-responsive"></a>
@@ -219,6 +219,11 @@
 								<a href="#OtherUniversities">Other Universities</a>
 							</li>
 						</ul>
+					</li>
+                    <li>
+						<a href="course_descriptions.html">
+                        <span class="caret down"></span> 
+                        Course Descriptions</a>
 					</li>
 				</ul>
 				<h3><a href="../l_version/HPW.html"><img src="../../../img/wip/icons/lversion.png" alt="L Version Logo"> L Version</a></h3>
