--- a/pages/what_is_pathway/s_version/degree.html
+++ b/pages/what_is_pathway/s_version/degree.html
@@ -220,6 +220,11 @@
 							</li>
 						</ul>
 					</li>
+                    <li>
+						<a href="course_descriptions.html">
+                        <span class="caret down"></span> 
+                        Course Descriptions</a>
+					</li>
 				</ul>
 				<h3><a href="../l_version/HPW.html"><img src="../../../img/wip/icons/lversion.png" alt="L Version Logo"> L Version</a></h3>
                 <h3><a href="../../pathway-faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
