--- a/pages/what_is_pathway/what_is_pathway.html
+++ b/pages/what_is_pathway/what_is_pathway.html
@@ -129,7 +129,7 @@
 				</div>
 
 				<div class="caption-block red">
-				<p>Visit our Media Page or use the social media links below to watch more Pathway videos.</p>
+				<p>Visit our <a href="http://www.byui.edu/pathway/videos" target="_blank">Media Page</a> or use the social media links below to watch more Pathway videos.</p>
 				</div>
 
 					
