--- a/pages/what_is_pathway/l_version/cost.html
+++ b/pages/what_is_pathway/l_version/cost.html
@@ -131,6 +131,7 @@
 				<a href="cost_calc_tuition.html"><img src="../../../img/cost/button_tuition_blue.png" alt="Click here to calculate tuition" class="img-responsive" width="100%"></a>
 
 				<img class="img-responsive" src="../../../img/cost/semester_college_cost.png" alt="Cost Chart" width="100%">
+<br>
 
 				<!-- <a href="cost_calc_tuition.html"><img src="../../../img/WIP/section_imgs/calculate_tuition.png" alt="Cost Chart" width="370" height="66" class="center-block img-responsive"></a>
 
@@ -218,6 +219,11 @@
 								<a href="#OtherUniversities">Other Universities</a>
 							</li>
 						</ul>
+					</li>
+                    <li>
+						<a href="course_descriptions.html">
+                        <span class="caret down"></span> 
+                        Course Descriptions</a>
 					</li>
 				</ul>
                 <h3><a href="../../pathway-faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
