--- a/pages/what_is_pathway/l_version/service_missionaries.html
+++ b/pages/what_is_pathway/l_version/service_missionaries.html
@@ -148,12 +148,12 @@
 
 		</div>
 		
-		<!-- Sidebar Start -->
+<!-- Sidebar Start -->
 <div class="col-xs-6 col-sm-4 pull-right" id="sidebar" role="navigation">
 			<div class="pf-sidebar" id="sideNav" role="complementary">
             <div class="sidebar-caret pos2"></div>
             
-				<h3><a  href="../s_version/HPW.html"><img src="../../../img/wip/icons/standard.png" alt="Standard Logo" width="51" height="52"> Standard</a></h3>
+				<h3><a href="../s_version/HPW.html"><img src="../../../img/wip/icons/standard.png" alt="Standard Logo" width="51" height="52"> Standard</a></h3>
 				<h3><a class="active" href="../l_version/HPW.html"><img src="../../../img/wip/icons/lversion.png" alt="L Version Logo"> L Version</a></h3>
                 <ul class="nav turquoise pf-sidenav">
 					<li>
@@ -216,6 +216,11 @@
 								<a href="#OtherUniversities">Other Universities</a>
 							</li>
 						</ul>
+					</li>
+                    <li>
+						<a href="course_descriptions.html">
+                        <span class="caret down"></span> 
+                        Course Descriptions</a>
 					</li>
 				</ul>
                 <h3><a href="../../pathway-faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
