--- a/pages/what_is_pathway/s_version/HPW.html
+++ b/pages/what_is_pathway/s_version/HPW.html
@@ -142,7 +142,7 @@
         <h4 class="p-heading2 red">Academic Courses</h4>
         <p>All groups complete their Pathway academic courses online and gather weekly at a local institute facility or church meetinghouse to discuss the lesson material, collaborate on assignments, and teach one another. </p>
         <h4 class="p-heading2 red">Religion Courses</h4>
-        <p>Students in the Age 18-30 and Age 18+ groups complete their Book of Mormon courses through their local institute program at no charge, and the credits are then eligible for transfer to BYU-Idaho.</p>
+        <p>Students in the Age 18-30 and Age 18+ groups complete their Book of Mormon courses through their local institute program at no charge, and the credits are then eligible for transfer to BYU-Idaho as elective credits.</p>
         <p>Students in the Age 31+ group complete their Book of Mormon courses online through BYU-Idaho.</p>
         <p>All groups complete the FDREL 333, “Teachings of the Living Prophets,” course online through BYU-Idaho.</p>
         
@@ -179,6 +179,11 @@
               <li> <a href="#OtherUniversities">Other Universities</a> </li>
             </ul>
           </li>
+          <li>
+						<a href="course_descriptions.html">
+                        <span class="caret down"></span> 
+                        Course Descriptions</a>
+					</li>
         </ul>
         <h3><a href="../l_version/HPW.html"><img src="../../../img/wip/icons/lversion.png" alt="L Version Logo"> L Version</a></h3>
         <h3><a href="../../pathway-faq.html"><img alt="FAQ icon" src="../../../img/faq/faqbubble_large.png"> FAQ</a></h3>
