--- a/pages/local_leaders/request-a-site.html
+++ b/pages/local_leaders/request-a-site.html
@@ -138,7 +138,7 @@
    					<p style="float:left; width:90%">Download the application and save a copy to your computer.</p>
    					
    						<img src="../../img/local-leaders/application.png" alt="Application">
-   						<a class="click-here blue" href="../../pdfs/local_leaders/Pathway_Site_Application.pdf">Click here to download Pathway site application form.</a>
+   						<a class="click-here blue" href="../../pdfs/local_leaders/Pathway_Site_Application.pdf" target="_blank">Click here to download the Pathway site application form.</a>
                   
                   <div style="margin-left:85px;"> 
 					<p class="info-block">This application requires Adobe Reader, which can be downloaded for free at <a style="color:#dc4831;" href="http://get.adobe.com/reader/">http://get.adobe.com/reader/</a>.</p>
