--- a/pages/speaking_partners/what-is-speaking-partners.html
+++ b/pages/speaking_partners/what-is-speaking-partners.html
@@ -139,14 +139,14 @@
       </div>
 
         <div class="caption-block green">
-        <p>To watch more videos or learn more about about Pathway, visit our <br><a href="http://www.byui.edu/pathway/videos" target="_blank">Media Page,</a> or click on one of the social media links at the bottom of the page.</p>
+        <p>To watch more videos or learn more about Pathway, visit our <br><a href="http://www.byui.edu/pathway/videos" target="_blank">Media Page,</a> or click on one of the social media links at the bottom of the page.</p>
         </div>
 
         <div class="main-content">
           <p>Requirements to serve as a Pathway English Speaker:</p>
           <ul>
             <li>Speak native or near-native English</li>
-            <li>Be an LDS member or BYU-Idaho student</li>
+            <li>Be a Latter-day Saint or BYU-Idaho student</li>
             <li>Be 18 years of age or older</li>
             <li>Have access to Internet and video chat setup</li>
             <li>Be available 30 minutes a week for 12 weeks</li>
