--- a/pages/what_is_pathway/s_version/degree.html
+++ b/pages/what_is_pathway/s_version/degree.html
@@ -130,7 +130,7 @@
 				<div class="main-content">
 				<p>Successfully completing Pathway opens doors to opportunity, which include participating in the BYU-Idaho Online Degree Program, attending BYU-Idaho as an on-campus student, or enrolling in a local college or university.</p>
 				<h3 id="OnlineDegree" class="p-heading red">Online Degree Program</h3>
-				<p>At the end of Pathway, students may advance into BYU-Idaho's Online Degree Program. To be eligible for the Online Degree Program, students must earn a minimum "B" average (3.0 GPA) during Pathway and obtain an ecclesiastical endorsement from their bishop.</p>
+				<p>At the end of Pathway, students may advance into BYU-Idaho's Online Degree Program. To be eligible, students must earn a minimum "B" average (3.0 GPA) during Pathway and obtain an ecclesiastical endorsement from their bishop.</p>
 
 				<img src="../../../img/degree-options/onlinedegreeprogram.png" alt="Student-working-online" class="img-responsive img-space" width="100%">
 
