--- a/pages/testimonials/testimonials.html
+++ b/pages/testimonials/testimonials.html
@@ -141,22 +141,22 @@
          <img class="quote-bubble img-responsive" src="../../img/testimonials/bubble_1.png" alt="quote bubble" width="100%">
       <p class="quote">Pathway…has really brought light to my life. It’s helped me out with so much stuff I never thought I’d achieve. I never had plans on going to college. Ever. Not even for a second in my life. And now I feel like I can achieve that because of Pathway. If it wasn’t for this program, I don’t think I could do it.</p>
             <div class="quote-credit one">
-      <p style="font-weight:bold">Joe Hedrick,<br><span style="font-weight:normal;font-style:italic;">Riverside, California, Pathway Student</span></p>
+      <p style="font-weight:bold">Joe Hedrick,<br><span style="font-weight:normal;font-style:italic;">Riverside, California Pathway Student</span></p>
       </div>
     </div>
     <div class="col-sm-4">
       <img class="quote-bubble img-responsive" src="../../img/testimonials/bubble_2.png" alt="quote bubble" width="100%">
-      <p class="quote">I love Pathway because it has given me the opportunity to learn from my classmates and it has given me the opportunity to increase my skills in every aspect of my life.</p>
+      <p class="quote">I love Pathway because it has given me the opportunity to learn from my classmates, and it has given me the opportunity to increase my skills in every aspect of my life.</p>
       <div class="quote-credit two">
-      <p style="font-weight:bold">Saul Castillo,<br><span style="font-weight:normal;font-style:italic;">Puebla, Mexico, <br>Pathway Student</span></p>
+      <p style="font-weight:bold">Saul Castillo,<br><span style="font-weight:normal;font-style:italic;">Puebla, Mexico <br>Pathway Student</span></p>
       </div>
     </div>
     <div class="col-sm-4">
       <img class="quote-bubble img-responsive" src="../../img/testimonials/bubble_3.png" alt="quote bubble" width="100%">
       <p class="quote">I just love Pathway. I think it was…almost like the Lord had created it for me. It was custom-tailored to what I needed. And I have been blessed. My testimony of the gospel through the study of the Book of Mormon, through the study of The
-      Living Prophets, has grown so much…I have a great love for Pathway.</p>
+      Living Prophets, has grown so much.…I have a great love for Pathway.</p>
       <div class="quote-credit three">
-      <p style="font-weight:bold">John Zeller,<br><span style="font-weight:normal;font-style:italic;">Boston, Massachusetts, <br>Pathway Student</span></p>
+      <p style="font-weight:bold">John Zeller,<br><span style="font-weight:normal;font-style:italic;">Boston, Massachusetts <br>Pathway Student</span></p>
       </div>
     </div>
     
@@ -179,7 +179,7 @@
     <iframe id="kaltura_player" src="https://www.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/16687322/partner_id/1157612?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=0_nilttrmj&amp;wid=0_c78i8o0i&amp;flashvars[mediaProtocol]=rtmp&amp;flashvars[streamerType]=rtmp&amp;flashvars[streamerUrl]=rtmp://www.kaltura.com:1935&amp;flashvars[rtmpFlavors]=1&amp;" width="304" height="231" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" frameborder="0">&lt;a href="http://corp.kaltura.com/products/video-platform-features"&gt;Video Platform&lt;/a&gt;&lt;a href="http://corp.kaltura.com/Products/Features/Video-Management"&gt;Video Management&lt;/a&gt;&lt;a href="http://corp.kaltura.com/Video-Solutions"&gt;Video Solutions&lt;/a&gt;&lt;a href="http://corp.kaltura.com/Products/Features/Video-Player"&gt;Video Player&lt;/a&gt;</iframe>
     </div>
     <p class="vid-title">Puebla, Mexico</p>
-    <p>Learn about Pathway’s impact on students in Puebla, Mexico</p>
+    <p>Learn about Pathway’s impact on students in Puebla, Mexico.</p>
    </div>
    <div class="col-xs-12 col-sm-4">
     <div class=" responsive-video-container">
@@ -194,21 +194,21 @@
     <div class=" responsive-video-container">
     <iframe id="kaltura_player" src="https://www.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/16687322/partner_id/1157612?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=0_wswmagyu&amp;wid=0_m9gu8dt8&amp;flashvars[mediaProtocol]=rtmp&amp;flashvars[streamerType]=rtmp&amp;flashvars[streamerUrl]=rtmp://www.kaltura.com:1935&amp;flashvars[rtmpFlavors]=1&amp;" width="304" height="231" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" frameborder="0">&lt;a href="http://corp.kaltura.com/products/video-platform-features"&gt;Video Platform&lt;/a&gt;&lt;a href="http://corp.kaltura.com/Products/Features/Video-Management"&gt;Video Management&lt;/a&gt;&lt;a href="http://corp.kaltura.com/Video-Solutions"&gt;Video Solutions&lt;/a&gt;&lt;a href="http://corp.kaltura.com/Products/Features/Video-Player"&gt;Video Player&lt;/a&gt;</iframe>
     </div>
-    <p class="vid-title">Student Profile: <br>Amber Wild</p>
+    <p class="vid-title">Amber Wild</p>
     <p><span style="font-style:italic;">Providence, RI</span> — Amber speaks on how Pathway has been an answer to her prayers.</p>
    </div>
    <div class="col-xs-12 col-sm-4">
     <div class=" responsive-video-container">
     <iframe id="kaltura_player" src="https://www.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/16687322/partner_id/1157612?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=0_wj843znz&amp;wid=0_ktcmyalj&amp;flashvars[mediaProtocol]=rtmp&amp;flashvars[streamerType]=rtmp&amp;flashvars[streamerUrl]=rtmp://www.kaltura.com:1935&amp;flashvars[rtmpFlavors]=1&amp;" width="304" height="231" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" frameborder="0">&lt;a href="http://corp.kaltura.com/products/video-platform-features"&gt;Video Platform&lt;/a&gt;&lt;a href="http://corp.kaltura.com/Products/Features/Video-Management"&gt;Video Management&lt;/a&gt;&lt;a href="http://corp.kaltura.com/Video-Solutions"&gt;Video Solutions&lt;/a&gt;&lt;a href="http://corp.kaltura.com/Products/Features/Video-Player"&gt;Video Player&lt;/a&gt;</iframe>
     </div>
-    <p class="vid-title">Student Profile: Arkadiusz Kolodziej</p>
+    <p class="vid-title">Arkadiusz Kolodziej</p>
     <p><span style="font-style:italic;">Brockton, MA</span> — Meet a father, a husband, a branch president, and a Pathway student.</p>
    </div>
    <div class="col-xs-12 col-sm-4">
     <div class=" responsive-video-container">
     <iframe id="kaltura_player" src="https://www.kaltura.com/p/1157612/sp/115761200/embedIframeJs/uiconf_id/16687322/partner_id/1157612?iframeembed=true&amp;playerId=kaltura_player&amp;entry_id=0_iu3j18ji&amp;wid=0_j4ukdt2m&amp;flashvars[mediaProtocol]=rtmp&amp;flashvars[streamerType]=rtmp&amp;flashvars[streamerUrl]=rtmp://www.kaltura.com:1935&amp;flashvars[rtmpFlavors]=1&amp;" width="304" height="231" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen="" frameborder="0">&lt;a href="http://corp.kaltura.com/products/video-platform-features"&gt;Video Platform&lt;/a&gt;&lt;a href="http://corp.kaltura.com/Products/Features/Video-Management"&gt;Video Management&lt;/a&gt;&lt;a href="http://corp.kaltura.com/Video-Solutions"&gt;Video Solutions&lt;/a&gt;&lt;a href="http://corp.kaltura.com/Products/Features/Video-Player"&gt;Video Player&lt;/a&gt;</iframe>
     </div>
-    <p class="vid-title">Student Profile:<br> Jordan and Tanya Wilde</p>
+    <p class="vid-title">Jordan and Tanya Wilde</p>
     <p><span style="font-style:italic;">Denton, TX</span> — A look into the lives of Jordan and Tanya Wilde, Pathway students from Denton,Texas.</p>
    </div>
    </div></div>
