--- a/pages/what_is_pathway/l_version/course_descriptions.html
+++ b/pages/what_is_pathway/l_version/course_descriptions.html
@@ -134,7 +134,7 @@
           software to perform mathematical and financial computations; apply
           math skills to financial decisions such as loan payments, savings, and
           budgeting; and discuss provident living topics (e.g., self-reliance,
-          stewardship, and personal finance. English language development is
+          stewardship, and personal finance). English language development is
           also emphasized as math and everyday vocabulary, as well as
           mechanics and grammar, are applied in speaking, listening, reading,
           and writing.</p>
