--- a/pages/what_is_pathway/s_version/course_descriptions.html
+++ b/pages/what_is_pathway/s_version/course_descriptions.html
@@ -128,7 +128,7 @@
           software to perform mathematical and financial computations; apply
           math skills to financial decisions such as loan payments, savings, and
           budgeting; and discuss provident living topics (e.g., self-reliance,
-          stewardship, and personal finance.</p>
+          stewardship, and personal finance).</p>
         <br>
         <br>
         <h4 class="c-heading red">Religion Courses</h4>
@@ -157,7 +157,7 @@
         <p>FDREL Book of Mormon courses are taught online through
           BYU-Idaho. FDREL 122 examines Alma 30 through Moroni 10. The
           teachings of the prophets – including Alma, Helaman, Mormon, Ether,
-          Moroni, – will be studied. Doctrinal topics covered in this course
+          and Moroni – will be studied. Doctrinal topics covered in this course
           include faith, repentance, the Atonement, the war against Satan, the
           purpose of life, and the “Doctrine of Christ” found in the scriptures.</p>
         <br>
