post final build (copy edits)

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -181,7 +181,7 @@
         </div>
         <div class="content-block">
           <div class="col-xs-12 col-sm-8">
-              <p>In January of 2009, BYU-Idaho introduced Pathway, a program
+              <p>In 2009, BYU-Idaho introduced Pathway, a program
               designed to help students prepare for earning a college degree
               through online courses and weekly gatherings with others. What
               started as a humble pilot program of three sites in the United States
