--- a/pages/speaking_partners/discussion-materials.html
+++ b/pages/speaking_partners/discussion-materials.html
@@ -133,7 +133,7 @@
             </p>
 
             <h3 class="p-heading green">MATH 100L: Personal Finance</h3>
-            <p>This course starts at the beginning with rounding and estimation, and progresses to graphs, slopes, and equations of lines.<br />
+            <p>This course starts at the beginning with rounding and estimation then progresses to graphs, slopes, and equations of lines.<br />
             <span class="note green"><a href="http://www.byui.edu/pathway/speaking-partners/math-100l" target="_blank">Math 100L Visit Assignments</a></span>
             </p>
 
