--- a/pages/speaking_partners/guidelines.html
+++ b/pages/speaking_partners/guidelines.html
@@ -136,7 +136,7 @@
             <p>You, as a speaking partner, play a significant role by allowing the Pathway student to practice these skills on a regular basis.</p>
 
             <h3 class="p-heading green">Authentic Language and Interaction</h3>
-            <p>The term “authentic language” means that the speakers are engaged in a natural conversation, listening attentively, and responding with interest. In other words, speaking partners should not try to slow down excessively to accommodate the student, nor should they modify their speech to simplify their English. However, speaking partners should be aware of their speech and avoid speaking too rapidly, using excessive slang, or using unnecessary ambiguity (see van Lier, 1996; personal communication, van Lier, 2011). Using commonly-used phrases and words is helpful for the students. Keep in mind that the more naturally you speak, the more authentic your language will be—which, in turn, will be of greater benefit to the student.</p>
+            <p>The term “authentic language” means that the speakers are engaged in a natural conversation, listening attentively, and responding with interest. In other words, speaking partners should not try to slow down excessively to accommodate the student, nor should they modify their speech to simplify their English. However, speaking partners should be aware of their speech and avoid speaking too rapidly, using excessive slang, or using unnecessary ambiguity (see van Lier, 1996; personal communication, van Lier, 2011). Using commonly used phrases and words is helpful for the students. Keep in mind that the more naturally you speak, the more authentic your language will be—which, in turn, will be of greater benefit to the student.</p>
 
             <div id="video-info-block">
             <img alt="play-button" class="play-button img-responsive" src="../../img/speaking-partners-main/speakingpartner_playbutton.png">
@@ -169,7 +169,7 @@
 
             <div id="video-info-block">
             <img alt="play-button" class="play-button img-responsive" src="../../img/speaking-partners-main/speakingpartner_playbutton.png">
-            <p class="note green">Watch the video below to learn more about Authentic Language and Interaction</p>
+            <p class="note green">Watch the video below to learn more about authentic language and interaction</p>
             </div>
 
             <div class="responsive-video-container sp">
