--- a/pages/speaking_partners/what-is-speaking-partners.html
+++ b/pages/speaking_partners/what-is-speaking-partners.html
@@ -119,7 +119,7 @@
       </div>
       <div class="pf-section no-icon">
 
-        <p>The Speaking Partner Program is an integral part of the Pathway experience. Students in Pathway’s L version benefit by practicing and improving their English speaking abilities, while those in the Standard version benefit by being speaking partners and therefore assisting non-native English speaking Pathway students. Through the Speaking Partner Program, Pathway students enhance their English skills, increase in confidence, and have better job opportunities as they graduate.</p>
+        <p>The Speaking Partner Program is an integral part of the Pathway experience. Students in Pathway’s L version benefit by practicing and improving their English speaking abilities, while those in the standard version benefit by being speaking partners and therefore assisting non-native English speaking Pathway students. Through the Speaking Partner Program, Pathway students enhance their English skills, increase in confidence, and have better job opportunities as they graduate.</p>
 
       </div>  
 
