--- a/pages/what_is_pathway/l_version/admission.html
+++ b/pages/what_is_pathway/l_version/admission.html
@@ -114,7 +114,7 @@
 <div class="hero pf-page-header">
 	<img src="../../../img/wip/icons/lversion.png" alt="standardLogo">
 	<h1 id="Standard" class="page-title">L Version</h1>
-	<p class="page-summary">For students who have low to intermediate English proficiency.</p></div>
+	<p class="page-summary">For students who have low to intermediate English proficiency</p></div>
 <div class="pf-section">
 	<div class="pf-page-header">
 		<img src="../../../img/wip/icons/checklist.png" alt="checklist">
@@ -139,7 +139,7 @@
 				Be capable of entry-level college academic work with post-secondary disability accommodations, if qualified and required
 			</li>
 			<li>
-				Be able to access a computer with high-speed internet on a daily basis
+				Be able to access a computer with high-speed Internet on a daily basis
 			</li>
 			<li>
 				Live within a reasonable commuting distance of a <a href="#joinpathway">Pathway site.</a> 
