--- a/pages/what_is_pathway/l_version/cost.html
+++ b/pages/what_is_pathway/l_version/cost.html
@@ -113,7 +113,7 @@
 				<img src="../../../img/wip/icons/lversion.png" alt="standardLogo">
 				<h1 id="Standard" class="page-title">L Version</h1>
 				
-					<p class="page-summary">For students who have low to intermediate English proficiency.</p></div>
+					<p class="page-summary">For students who have low to intermediate English proficiency</p></div>
 			<div class="pf-section">
 				<div class="pf-page-header">
 					<img src="../../../img/wip/icons/piggy.png" alt="piggy">
@@ -130,11 +130,9 @@
 				<br>
 
 <br>
-				<img class="img-responsive" src="../../../img/cost/semester_college_cost.png" alt="Cost Chart" width="100%">
+<p>Pathway students who pursue a degree through BYU-Idaho's Online Degree Program after Pathway continue to pay their local Pathway tuition rate. Pathway tuition may increase annually.</p>
 
-				<p>Pathway students who pursue a degree through BYU-Idaho's Online Degree Program after Pathway continue to pay their local Pathway tuition rate. Pathway tuition may increase annually.</p>
-
-				<p>Pathway students who choose to continue their education on campus after Pathway will pay regular on campus tuition.</p>
+				<p>Pathway students who choose to continue their education on campus after Pathway will pay regular on-campus tuition.</p>
 				
 				<h3 id="FinancialAid" class="p-heading turquoise">Financial Aid</h3>
 				<p>Financial aid is not available for Pathway students during their first year. However, U.S. students who have a high school diploma or GED may apply for federal financial aid after they complete Pathway and if they are accepted into a degree-seeking program.</p>
