--- a/pages/what_is_pathway/s_version/degree.html
+++ b/pages/what_is_pathway/s_version/degree.html
@@ -115,7 +115,7 @@
 				<img src="../../../img/wip/icons/standard.png" alt="standardLogo">
 				<h1 id="Standard" class="page-title">Standard Version</h1>
 
-					<p class="page-summary">For students who are proficient in English.</p>
+					<p class="page-summary">For students who are proficient in English</p>
 				
 			</div>
 			<div class="pf-section">
