--- a/pages/what_is_pathway/l_version/cost_calc_tuition.html
+++ b/pages/what_is_pathway/l_version/cost_calc_tuition.html
@@ -116,7 +116,7 @@
 			<div class="hero pf-page-header">
 				<img src="../../../img/wip/icons/lversion.png" alt="standardLogo">
 				<h1 id="Standard" class="page-title">L Version</h1>
-				<p class="page-summary">For students who have low to intermediate English proficiency.</p></div>
+				<p class="page-summary">For students who have low to intermediate English proficiency</p></div>
 			<div class="pf-section">
 				<div class="pf-page-header">
 					<img src="../../../img/wip/icons/piggy.png" alt="piggy">
