--- a/pages/what_is_pathway/l_version/degree.html
+++ b/pages/what_is_pathway/l_version/degree.html
@@ -116,7 +116,7 @@
 				<img src="../../../img/wip/icons/lversion.png" alt="standardLogo">
 				<h1 id="Standard" class="page-title">L Version</h1>
 
-					<p class="page-summary">For students who have low to intermediate English proficiency.</p></div>
+					<p class="page-summary">For students who have low to intermediate English proficiency</p></div>
 			<div class="pf-section">
 				<div class="pf-page-header">
 					<img src="../../../img/wip/icons/cap.png" alt="cap" width="45" height="46">
