--- a/pages/what_is_pathway/l_version/speaking_partners.html
+++ b/pages/what_is_pathway/l_version/speaking_partners.html
@@ -114,7 +114,7 @@
 			<div class="hero pf-page-header">
 				<img src="../../../img/wip/icons/lversion.png" alt="standardLogo">
 				<h1 id="Standard" class="page-title">L Version</h1>
-				<p class="page-summary">For students who are <span style="font-style:normal">not</span> fully proficient in English.</p> 
+				<p class="page-summary">For students who have low to intermediate English proficiency</p> 
 			</div>
 			<div class="pf-section">
 				<div class="pf-page-header">
