--- a/pages/what_is_pathway/s_version/HPW.html
+++ b/pages/what_is_pathway/s_version/HPW.html
@@ -97,7 +97,7 @@
       </button>
       <div class="hero pf-page-header"> <img src="../../../img/wip/icons/standard.png" alt="standardLogo">
         <h1 id="Standard" class="page-title">Standard Version</h1>
-        <p class="page-summary">For students who are proficient in English.</p>
+        <p class="page-summary">For students who are proficient in English</p>
       </div>
       <div class="pf-section">
         <div class="pf-page-header"> <img src="../../../img/wip/icons/gear.png" width="45" height="46" alt="gear">
